# ScraperAPI

./: README.md  company.html  pyproject.toml  requirements.txt
src/client/: client.py
src/scraperapi/: client.py
src/scraperapi/client/: client.py  test_client.py
src/scraperapi/server/: browser_handler.py  server.py  start_server.py
src/scraperapi/shared/: message_utils.py  utils.py
src/server/: browser_handler.py  nodriver_custom.py  server.py  start_server.py
